--- a/.travis.yml
+++ b/.travis.yml
@@ -13,9 +13,11 @@ matrix:
   include:
     - perl: "5.28"
       env: COVERAGE=1
+env:
+  global:
+    - FETCH_EXTERNAL_TESTS=1
 before_install:
   - git clone git://github.com/haarg/perl-travis-helper
-  - make -C xt
   - source perl-travis-helper/init
   - build-perl
   - perl -V
